# javy

./: .gitignore  Cargo.toml  Makefile  count.rb  flake.nix  input.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/apis/: Cargo.toml
crates/apis/src/: lib.rs
crates/apis/src/json/: json.js  llrt_json.rs  mod.rs
crates/apis/src/text_encoding/: mod.rs
crates/cli/: Cargo.toml
crates/cli/benches/: benchmark.rs
crates/cli/benches/functions/large_io/: index.js  input.json
crates/cli/src/: bytecode.rs  commands.rs  main.rs
crates/cli/src/codegen/: static.rs  transform.rs
crates/cli/src/wasm_generator/: static.rs  transform.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/compiler-rt-plugin/: Cargo.toml
crates/compiler-rt-plugin/src/: env.rs  lib.rs
crates/jacrt/: Cargo.toml  index.wat  link.wat
crates/jacrt/src/: env.rs  lib.rs
crates/javy/: Cargo.toml
crates/javy/src/: runtime.rs
crates/javy/src/apis/: mod.rs  simon.rs  simon_intrinsic.rs
crates/plugin-api/src/: lib.rs
crates/quickjs-wasm-sys/: build.rs
docs/: docs-using-nodejs.md
jac/bench/: Cargo.toml  build.rs
jac/bench/benches/: compiled.wasm  interpreted.wasm  jac.rs
jac/bench/src/: main.rs
jac/compiler/src/: args.rs  builder.rs  compiler.rs  control.rs  crt.rs  frontend.rs  lib.rs  linkage.rs  stack.rs
jac/parsetrace/src/: lib.rs
jac/quickpars/src/: atom.rs  bc.rs  lib.rs  op.rs  readers.rs  sections.rs
jac/translate/src/: lib.rs  printer.rs
